--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /javascript-1/javascript-1/nbproject/private/
+/javascript-1/u1e1_numeros/nbproject/private/
+/u1e1_numeros/u1e1_numeros/nbproject/private/
+/u1e2_cadenes/nbproject/private/
+/u1e3_comparació/nbproject/private/
+/u1e3_comparacio/nbproject/private/
+/u1e4_ifelse/nbproject/private/
+/u1_dni/u1_dni/nbproject/private/
