Bloque B  de Javascript y juego Ahorcado completado (o casi)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /u1e3_comparacio/nbproject/private/
 /u1e4_ifelse/nbproject/private/
 /u1_dni/u1_dni/nbproject/private/
+/u1_js_activities/nbproject/private/
