WEB Asociacion Deportiva

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /u1e4_ifelse/nbproject/private/
 /u1_dni/u1_dni/nbproject/private/
 /u1_js_activities/nbproject/private/
+/AssociacioEsportiva/nbproject/private/
