--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /u1_dni/u1_dni/nbproject/private/
 /u1_js_activities/nbproject/private/
 /AssociacioEsportiva/nbproject/private/
+/u2e5_math/nbproject/private/
