--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /u1_js_activities/nbproject/private/
 /AssociacioEsportiva/nbproject/private/
 /u2e5_math/nbproject/private/
+/u2e6_figuras/nbproject/private/
+/u2e7_number/nbproject/private/
+/u2e8_nombreapellidos/nbproject/private/
+/ObjectesDefinits/nbproject/private/
