Bloque 3 ejercicios javascript empezados

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /u2e7_number/nbproject/private/
 /u2e8_nombreapellidos/nbproject/private/
 /ObjectesDefinits/nbproject/private/
+/u3e1_arrays/nbproject/private/
