--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /u2e8_nombreapellidos/nbproject/private/
 /ObjectesDefinits/nbproject/private/
 /u3e1_arrays/nbproject/private/
+/unidad3_prototipado/nbproject/private/
