--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /ObjectesDefinits/nbproject/private/
 /u3e1_arrays/nbproject/private/
 /unidad3_prototipado/nbproject/private/
+/JaumeLlopisExamenDWEC/nbproject/private/
