--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /u3e1_arrays/nbproject/private/
 /unidad3_prototipado/nbproject/private/
 /JaumeLlopisExamenDWEC/nbproject/private/
+/Eleccions/nbproject/private/
