--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /unidad3_prototipado/nbproject/private/
 /JaumeLlopisExamenDWEC/nbproject/private/
 /Eleccions/nbproject/private/
+/Memory/nbproject/private/
