--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /JaumeLlopisExamenDWEC/nbproject/private/
 /Eleccions/nbproject/private/
 /Memory/nbproject/private/
+/ExpresionsRegulars/nbproject/private/
