--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Memory/nbproject/private/
 /ExpresionsRegulars/nbproject/private/
 /BuscaMinas/nbproject/private/
+/ExercicisJQUERY/nbproject/private/
