--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /ExpresionsRegulars/nbproject/private/
 /BuscaMinas/nbproject/private/
 /ExercicisJQUERY/nbproject/private/
+/Examen-20200206/nbproject/private/
+/JavascriptDOM/nbproject/private/
+/JavaScriptDOM/nbproject/private/
