jQuery y template escacs

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /Examen-20200206/nbproject/private/
 /JavascriptDOM/nbproject/private/
 /JavaScriptDOM/nbproject/private/
+/AgenciaViajes/nbproject/private/
+/escacas/nbproject/private/
