--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /AgenciaViajes/nbproject/private/
 /escacas/nbproject/private/
 /promises/nbproject/private/
+/exercicis-ajax-promises/nbproject/private/
